fixed homepage logo overflow issue

--- a/frontend/src/components/styles/HomePageBody.css
+++ b/frontend/src/components/styles/HomePageBody.css
@@ -2,7 +2,7 @@
     position: relative;
     top: 0;
     left:0;
-    height: 100%;
+    height: calc(100vh - 7rem - 2px);
     width: 100%;
     display: flex;
     justify-content: center;
@@ -19,5 +19,5 @@
     width: 500px;
     border-radius: 8px;
     border: 1pt solid white;
-    margin-top: 150px;
+    margin-top: 20vh;
 }
